--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\devtools\\Python3\\python.exe",
+    "python.pythonPath": ".venv\\Scripts\\python.exe",
     "python.jediEnabled": false,
     "python.languageServer": "Microsoft"
 }
